made hero-content responsive

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     
         <div class="hero-section">
         <div class="hero-content">
-            <div><a href="#"><img src="./assets/Limited Time Only For Winter.svg"></a></div>
-            <div><a href="#"><img src="./assets/fashion.svg"></a></div>
-            <div><a href="#"></a><img src="./assets/LOOK YOUR BEST ON YOUR BEST DAY.svg"></div>
+            <div id="winters-only">Limited Time Only For Winter</div>
+            <div id="fashion">fashion</div>
+            <div id="best-day">LOOK YOUR BEST ON YOUR BEST DAY</div>
         </div>
         <div class="hero-img">
               <img src="./assets/Poster Picture.svg" alt="poster">
