edited hero section

--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
       </nav>
     
         <div class="hero-section">
-        <div class="hero-content">
-            <div id="winters-only">Limited Time Only For Winter</div>
-            <div id="fashion">fashion</div>
-            <div id="best-day">LOOK YOUR BEST ON YOUR BEST DAY</div>
+        <div class="hero-content-left">
+            <p id="winters-only">Limited Time Only For Winter</p>
+            <h1 id="fashion">fashion</h1>
+            <p id="best-day">LOOK YOUR BEST ON YOUR BEST DAY</p>
+            <button class="btn mt-5 rounded shadow">Explore Now!</button>
         </div>
-        <div class="hero-img">
-              <img src="./assets/Poster Picture.svg" alt="poster">
-        </div>
+              <div class="d-flex hero-right">
+                <img src="./assets/Poster Picture.svg" alt="poster" class="img-fluid">
+              </div>       
     </div>
     
 
